--- a/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22.csproj
+++ b/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22.csproj
@@ -58,6 +58,13 @@
     <Compile Include="IBulldozer.cs" />
     <Compile Include="InterfaceDop.cs" />
     <Compile Include="ModBulldozer.cs" />
+    <Compile Include="Parking.cs" />
+    <Compile Include="ParkingPlace.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParkingPlace.Designer.cs">
+      <DependentUpon>ParkingPlace.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleWheel.cs" />
@@ -67,6 +74,9 @@
     <Compile Include="Wheels.cs" />
     <EmbeddedResource Include="FormBulldozer.resx">
       <DependentUpon>FormBulldozer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParkingPlace.resx">
+      <DependentUpon>ParkingPlace.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
