--- a/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/App.config
+++ b/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<configSections>
+		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+	</startup>
+	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		<targets>
+			layout="${date:format=HH\:mm\:ss}|${level}|${message}" />
+			<target name="logfile" xsi:type="File" fileName="D://Logs//file.txt"/>
+		 <target name = "Mail" xsi:type="Mail" html="true" subject="Error Received"
+				 body="${message}"
+				 to="some1@some.com"
+				 from="some@gmail.com"
+				 encoding="UTF-8"
+				 smtpUserName="some@some.com"
+				 enableSsl="false"
+				 smtpPassword="password"
+				 smtpAuthentication="Basic"
+				 smtpServer="smtp.some.com"
+				 smtpPort="25" />
+		</targets>
+		<rules>
+			<logger name="*" level="Info" writeTo="logfile" />
+		</rules>
+	</nlog>
 </configuration>
