--- a/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22.csproj
+++ b/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22/labaBuldozerKazakovISEbd-22.csproj
@@ -33,8 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.13\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,6 +74,9 @@
     <Compile Include="ModBulldozer.cs" />
     <Compile Include="Parking.cs" />
     <Compile Include="ParkingCollection.cs" />
+    <Compile Include="ParkingNotFoundException.cs" />
+    <Compile Include="ParkingOccupiedPlaceException.cs" />
+    <Compile Include="ParkingOverflowException.cs" />
     <Compile Include="ParkingPlace.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +108,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
